[package]
name = "p2sa"
version = "0.1.1"
edition = "2024"
description = "A Rust library and a CLI tool to transform your pictures into String Art 🧵"
repository = "https://github.com/Hvrnbi/p2sa"
readme = "README.md"
keywords = ["stringart", "string-art", "string-art-generator"]
categories = ["multimedia", "multimedia::images"]
license-file = "LICENSE"


[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
edge-detection = "0.3.0"
fastrand = "2.4.1"
image = "0.25.10"
svg = "0.18.0"
